--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=quizappuser; Password=Passw0rd; Database=quizdb"
+  }
 }
