Implementation CreateToken method in TokenService class

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; Port=5432; User Id=quizappuser; Password=Passw0rd; Database=quizdb"
-  }
+  },
+  "TokenKey": "base key for token"
 }
