--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@types/chart.js": "^2.9.32",
     "angular-bootstrap-md": "^11.1.0",
     "animate.css": "^4.1.1",
+    "bootswatch": "^5.0.0",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
