--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "bootswatch": "^5.0.0",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
