--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@types/chart.js": "^2.9.32",
     "angular-bootstrap-md": "^11.1.0",
     "animate.css": "^4.1.1",
