--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=Passw0rd; Database=quizdb"
+  },
+  "TokenKey": "base key for token"
 }
