--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; User Id=quizappuser; Password=Passw0rd; Database=quizdb"
+    "DefaultConnection": "Server=host.docker.internal; Port=5432; User Id=appuser; Password=Passw0rd; Database=quizdb"
   },
   "TokenKey": "base key for token"
 }
